fix: add gap for nav-list class

--- a/practice/src/css/pages/homepage.css
+++ b/practice/src/css/pages/homepage.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
   width: 100%;
 }
 
@@ -88,4 +89,11 @@
 
 .active svg {
   filter: invert(100%) hue-rotate(180deg) brightness(10);
+}
+
+/* Tablet */
+@media (min-width: 768px) {
+  .nav-list {
+    gap: 30px;
+  }
 }
